[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6.0"
bitflags = "2.4.1"
xmas-elf = "0.9.0"
# log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
log = {path = "./log"}
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-nb = "=1.0.0-alpha.1"
nb = "1"

[profile.release]
# debug = true
#strip = true
# opt-level = "s"
lto = true
codegen-units = 1
# panic = "abort"

