[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
linked_list_allocator = "0.10.5"

[profile.release]
# debug = true
# strip = true
# opt-level = "s"
lto = true
codegen-units = 1
# panic = "abort"


# [features]
# board_qemu = []
# board_k210 = []
